Fix pixel perfect for advantages block on tablet

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -37,10 +37,10 @@
   @include md-size {
     width: 245px;
     padding: 0;
-    padding-top: 120px;
+    padding-top: 113px;
     padding-left: 0;
-    margin-bottom: 140px;
-    margin-right: 180px;
+    margin-bottom: 133px;
+    margin-right: 138px;
   }
 
   @include lg-size {
@@ -120,6 +120,7 @@
   &--healthy::after {
     @include md-size {
       content: "1";
+      right: 16px;
     }
   }
 
