--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -26,6 +26,6 @@
   margin-bottom: 40px;
 
   @include md-size {
-    margin-top: 50px;
+    margin-top: 47px;
   }
 }
